# snake-game

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: game.h  location.h  snake.h
src/: game.cpp  location.cpp  main.cpp  snake.cpp
src/food/: food.cpp  food.h
src/game/: game.cpp  game.h
src/location/: location.cpp  location.h
src/snake/: snake.cpp  snake.h
